compiler/kernc_cli/tests/soundness/reject/specialization/supertrait_upcast_cannot_fall_back_to_shadowed_assoc_impl.rn
// stderr: does not implement the target trait

trait Base[N: usize] {
    type Out;
    fn make() Out;
};

trait Derived[N: usize]: Base[N] {};

struct X {};

impl[N: usize] &X: Derived[N] {}

impl[N: usize] &X: Base[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

impl &X: Base[4] {
    type Out = i64;

    fn make() Out {
        return 9;
    }
}

fn main() i32 {
    let x = X.{};
    let derived = (x.& as &Derived[4]);
    _ = (derived as &Base[4, Out = i32]);
    return 0;
}
